# rust-openai-chatgpt-api

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  llms.txt  readme.md
.github/workflows/: ci.yml
examples/: audio.rs  chat.rs  embeddings.rs  function_calling.rs  images.rs  responses.rs  streaming.rs  structured_output.rs
src/: audio.rs  chat.rs  client.rs  embeddings.rs  error.rs  file.rs  http.rs  images.rs  lib.rs  models.rs  moderations.rs  responses.rs  sse.rs
src/v1/: audio.rs  chat.rs  completions.rs  edits.rs  embeddings.rs  images.rs  mod.rs  models.rs
tests/: gpt_test.rs  integration_test.rs
