[package]
name = "openai_chatgpt_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
authors = ["uiuifree"]
description = "OpenAI ChatGPT API"
license = "MIT"
[dependencies]
reqwest = { version = "0.11.10", features = ["json", "multipart"] }

# Json
serde = { version = "1.0" }
serde_json = "1.0"
serde_derive = "1.0"
[dev-dependencies]
tokio = { version = "1.19.2", features = ["full"] }
