[package]
name = "openai_chatgpt_api"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
authors = ["uiuifree"]
description = "Typed async Rust client for the OpenAI API: Responses API, Chat Completions, Embeddings, Images (gpt-image), Audio (TTS/STT), Moderations, and Models — with SSE streaming, Structured Outputs, and function calling"
license = "MIT"
repository = "https://github.com/uiuifree/rust-openai-chatgpt-api"
documentation = "https://docs.rs/openai_chatgpt_api"
homepage = "https://github.com/uiuifree/rust-openai-chatgpt-api"
readme = "README.md"
keywords = ["openai", "chatgpt", "gpt", "llm", "ai"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.13", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
futures-util = "0.3"
async-stream = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
base64 = "0.22"
